<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#0f212121"
    style="@style/MyDialogTheme">
    <include layout="@layout/personal_toolbar" android:id="@+id/personal_toolbar_main"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/personal_toolbar_main">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_text_message"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin_place"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/travel_place_name_origin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/travel_pick_origin"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_location_on_black_48dp"
                android:minWidth="75dp"
                android:minHeight="75dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destiny_place"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/travel_place_name_destiny"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/travel_pick_destiny"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_location_on_black_48dp"
                android:minWidth="75dp"
                android:minHeight="75dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_of_vehicle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/travel_own_car_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_own_car"
                android:checked="true"/>
            <CheckBox
                android:id="@+id/travel_public_transport_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_transport"/>
            <TextView
                android:id="@+id/travel_public_transport_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choices for the different type of transport will be seen"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel"/>
    </android.support.v7.widget.ButtonBarLayout>
</RelativeLayout>