<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.codebrain.minato.mapsapp.LoginActivity">

    <include layout="@layout/personal_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/bac">

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/logo_tragua"
                android:layout_marginBottom="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:src="@drawable/ic_launcher_background"
                android:text="@string/title_registry"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                tools:ignore="ObsoleteLayoutParam" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/info_text"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:background="#C8C9CB"
                tools:ignore="ObsoleteLayoutParam" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">
                <EditText
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/fab_padding"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="@dimen/fab_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    tools:ignore="ObsoleteLayoutParam" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">
                <EditText
                    android:id="@+id/register_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/fab_padding"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                    android:ems="10"
                    android:hint="@string/firstname"
                    android:inputType="text"
                    android:padding="@dimen/fab_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">
                <EditText
                    android:id="@+id/register_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/fab_padding"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                    android:ems="10"
                    android:hint="@string/lastname"
                    android:inputType="text"
                    android:padding="@dimen/fab_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    tools:ignore="ObsoleteLayoutParam" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">
                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/fab_padding"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/fab_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    tools:ignore="ObsoleteLayoutParam" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">
                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/fab_padding"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/fab_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    tools:ignore="ObsoleteLayoutParam" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">
                <EditText
                    android:id="@+id/register_password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/fab_padding"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                    android:ems="10"
                    android:hint="@string/repeatpassword"
                    android:inputType="textPassword"
                    android:padding="@dimen/fab_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    tools:ignore="ObsoleteLayoutParam" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/register_signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:text="@string/registry"
                android:textColor="@color/white"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>