<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.codebrain.minato.mapsapp.LoginActivity">

    <include layout="@layout/personal_toolbar"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="54dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/logo_tragua"
                android:layout_marginBottom="24dp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/info_text"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:background="#C8C9CB" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/fab_padding"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="@dimen/fab_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/fab_padding"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/fab_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/login"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"/>

            <TextView
                android:id="@+id/login_no_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
